# sgm

./: .gitignore  CMakeLists.txt  README.md
example/: sgm_cpu_main.cpp  sgm_gpu_main.cpp
src/: sgm.h  sgm_cpu.cpp  sgm_cpu.h  sgm_define.h
src/common/: sgm.h  sgm_define.h  sgm_util.cpp  sgm_util.h
src/sgm_cpu/: sgm_cpu.cpp  sgm_cpu.h
src/sgm_gpu/: sgm_gpu.cu  sgm_gpu.h
